2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/time/TimePeriodValuesCollection.java
	(domainIsPointsInTime): Removed,
	(getDomainIsPointsInTime): Likewise,
	(setDomainIsPointsInTime): Likewise,
	* tests/org/jfree/data/time/junit/TimePeriodValuesCollectionTests.java:
	Updated for deprecated method removals.

2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/time/RegularTimePeriod.java
	(WORKING_CALENDAR): Removed,
	(getFirstMillisecond(TimeZone)): Removed,
	(getLastMillisecond(TimeZone)): Likewise,
	(getMiddleMillisecond(TimeZone)): Likewise,
	* tests/org/jfree/data/time/junit/DayTests.java: Updated for deprecated
	method removals,
	* tests/org/jfree/data/time/junit/HourTests.java: Likewise,
	* tests/org/jfree/data/time/junit/MillisecondTests.java: Likewise,
	* tests/org/jfree/data/time/junit/MinuteTests.java: Likewise,
	* tests/org/jfree/data/time/junit/MonthTests.java: Likewise,
	* tests/org/jfree/data/time/junit/QuarterTests.java: Likewise,
	* tests/org/jfree/data/time/junit/SecondTests.java: Likewise,
	* tests/org/jfree/data/time/junit/WeekTests.java: Likewise,
	* tests/org/jfree/data/time/junit/YearTests.java: Likewise.

2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/jdbc/JDBCXYDataset.java
	(getLegendItemCount): Removed,
	(getLegendItemLabels): Removed.

2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/contour/ContourDataset.java: Removed,
	* source/org/jfree/data/contour/DefaultContourDataset.java: Removed,
	* source/org/jfree/data/contour/NonGridContourDataset.java: Removed,
	* source/org/jfree/data/contour/package.html: Removed.
	
2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/category/DefaultIntervalCategoryDataset.java
	(getSeries): Removed,
	(getCategories): Likewise,
	(getItemCount): Likewise.
